# StackExAR

./: .gitignore  README.md  env_config  main.py  pyproject.toml  requirements.txt
app/: __init__.py  global_app.py
app/database/: function.py  models.py
app/routers/: archive.py  config.py  index.py
app/utils/: app_types.py  archive.py  archive_extra.py  archive_reader.py  config.py  custom_types.py  types.py
