[tool.poetry]
name = "stackexar"
version = "0.1.0"
description = ""
authors = ["Igor Markov <taruumax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.1"}
tortoise-orm = "^0.20.0"
py7zr = "^0.20.8"
aiosqlite = "0.16.0"
uvicorn = "^0.27.0.post1"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
tqdm = "^4.66.2"
indexed_bzip2 = {file = "indexed_bzip2/python/indexed_bzip2/dist/indexed_bzip2-1.5.0-cp311-cp311-linux_x86_64.whl"}
greenlet = "^3.0.3"
sqlalchemy = "^2.0.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
